--- a/src/templates/actors/fragments/char/tab-skills.html
+++ b/src/templates/actors/fragments/char/tab-skills.html
@@ -10,9 +10,9 @@
       <input
         class="w-20 text-center pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
         type="number"
-        name="data.unspentSkillPoints"
+        name="system.unspentSkillPoints"
         min="0"
-        value="{{actor.data.data.unspentSkillPoints}}"
+        value="{{actor.system.unspentSkillPoints}}"
         data-dtype="Number"
       />
       <label>{{localize 'swnr.sheet.unspent-skill'}}</label>
@@ -21,9 +21,9 @@
       <input
         class="w-20 text-center pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
         type="number"
-        name="data.unspentPsySkillPoints"
+        name="system.unspentPsySkillPoints"
         min="0"
-        value="{{actor.data.data.unspentPsySkillPoints}}"
+        value="{{actor.system.unspentPsySkillPoints}}"
         data-dtype="Number"
       /> 
       <label>{{localize 'swnr.sheet.unspent-psy-skill'}}</label>
