--- a/src/templates/actors/fragments/char/tab-stats.html
+++ b/src/templates/actors/fragments/char/tab-stats.html
@@ -20,10 +20,10 @@
             <th class="px-1">{{localize 'swnr.sheet.modifier'}}</th>
           </tr>
         </thead>
-        {{#each actor.data.data.stats as |stat key|}}
+        {{#each actor.system.stats as |stat key|}}
         <tr>
           <td>
-            <label for="data.stats.{{key}}.base" class="resource-label px-1">
+            <label for="system.stats.{{key}}.base" class="resource-label px-1">
               {{localize (concat 'swnr.stat.long.' key)}}
             </label>
           </td>
@@ -34,7 +34,7 @@
               min="3"
               max="18"
               step="1"
-              name="data.stats.{{key}}.base"
+              name="system.stats.{{key}}.base"
               value="{{stat.base}}"
               data-dtype="Number"
             />
@@ -46,7 +46,7 @@
               min="0"
               max="5"
               step="1"
-              name="data.stats.{{key}}.boost"
+              name="system.stats.{{key}}.boost"
               value="{{stat.boost}}"
               data-dtype="Number"
             />
@@ -58,7 +58,7 @@
               min="0"
               max="3"
               step="1"
-              name="data.stats.{{key}}.bonus"
+              name="system.stats.{{key}}.bonus"
               value="{{stat.bonus}}"
               data-dtype="Number"
             />
@@ -83,11 +83,11 @@
             class="w-8 text-right pl-1.5 py-1.5  subfield placeholder-blue-800  placeholder-opacity-75 "
             type="number"
             min="0"
-            name="data.systemStrain.permanent"
-            value="{{actor.data.data.systemStrain.permanent}}"
+            name="system.systemStrain.permanent"
+            value="{{actor.system.systemStrain.permanent}}"
           /> + <span
               class="inline-block text-left text-gray-300 cursor-not-allowed w-8"
-              >{{actor.data.data.systemStrain.cyberware}}</span>
+              >{{actor.system.systemStrain.cyberware}}</span>
         </div>
       </div>
       <div class="armor flex flexrow items-center">
@@ -97,8 +97,8 @@
           class="w-8 text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           min="1"
           step="1"
-          name="data.baseAc"
-          value="{{actor.data.data.baseAc}}"
+          name="system.baseAc"
+          value="{{actor.system.baseAc}}"
           data-dtype="Number"
         />
       </div>
@@ -106,8 +106,8 @@
           <span><label>{{localize 'swnr.sheet.hd'}}</label>:</span>
         <input
           class="w-6   text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-          name="data.hitDie"
-          value="{{actor.data.data.hitDie}}"
+          name="system.hitDie"
+          value="{{actor.system.hitDie}}"
         />
       </div>
 
@@ -119,8 +119,8 @@
           class="w-8 text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           min="1"
           step="1"
-          name="data.traumaTarget"
-          value="{{actor.data.data.traumaTarget}}"
+          name="system.traumaTarget"
+          value="{{actor.system.traumaTarget}}"
           data-dtype="Number"
         />
       </div>
@@ -154,7 +154,7 @@
                     <div class="item-image" style="background-image: url({{item.img}})"><a></a></div>
                     <a>{{item.name}}</a>
                   </div>
-                  <div class="flex-shrink w-8">{{item.data.data.level}}</div>
+                  <div class="flex-shrink w-8">{{item.system.level}}</div>
                   <div class="item-controls w-20  text-right">
                     <a class="item-control item-edit text-gray-400 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
                       <i class="fas fa-edit"></i></a>
