--- a/src/templates/actors/fragments/faction-assets.html
+++ b/src/templates/actors/fragments/faction-assets.html
@@ -24,50 +24,50 @@
         </div>
         {{#each assets as |item id|}}
         <div class="item item-entry flex-table row flexrow pl-2" role="rowgroup" data-item-id="{{item.id}}">
-          <div class="flexrow first item-name item-click item-rollable" role="cell" title="{{item.data.data.description}}">
+          <div class="flexrow first item-name item-click item-rollable" role="cell" title="{{item.system.description}}">
             <div class="item-image" style="background-image: url({{item.img}})"><a></a>
             </div>
             <div class="  flexrow pr-2.0" role="cell">
-              <a><span title="{{item.data.data.description}}">
+              <a><span title="{{item.system.description}}">
                 {{item.name}}
-                {{#if item.data.data.baseOfInfluence}}
+                {{#if item.system.baseOfInfluence}}
                   <i class="fas fa-home  text-gray-400"></i>
                 {{/if}}
               </span></a>
             </div>
           </div>
           <div class="flexrow small-cell text-center" role="cell">
-            {{ item.data.data.rating }}
+            {{ item.system.rating }}
           </div>
           <div class="flexrow small-cell text-center" role="cell">
-            {{ item.data.data.health.value }}/{{ item.data.data.health.max }}
+            {{ item.system.health.value }}/{{ item.system.health.max }}
 
           </div>
           <div class="flexrow text-center" role="cell">
-            {{ item.data.data.location }}
+            {{ item.system.location }}
           </div>
           <div class="flexrow text-center" role="cell">
-            {{#if item.data.data.attackDamage}}
-            {{firstLetter item.data.data.attackSource }} vs {{firstLetter item.data.data.attackTarget }} 
-            {{ item.data.data.attackDamage }}
+            {{#if item.system.attackDamage}}
+            {{firstLetter item.system.attackSource }} vs {{firstLetter item.system.attackTarget }} 
+            {{ item.system.attackDamage }}
             {{/if}}
           </div>
           <div class="flexrow text-center pl-2" role="cell">
-            {{ item.data.data.counter }}
+            {{ item.system.counter }}
           </div>
           <div class="flexrow  small-cell  text-center pl-2" role="cell">
-            {{ item.data.data.note }}
+            {{ item.system.note }}
           </div>
           <div class="item-controls  med-cell pr-1 text-right flex-shrink flexrow" role="cell">
             {{!-- <a class="item-control item-fix text-gray-400 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.fix-item'}}'>
               <i class="fas fa-tools"></i></a> --}}
-            <a class="item-control asset-toggle-unusable  {{#unless item.data.data.unusable}}item-working{{/unless}}"
+            <a class="item-control asset-toggle-unusable  {{#unless item.system.unusable}}item-working{{/unless}}"
               title='{{localize 'swnr.sheet.break-item'}}'>
-              <i class="fas fa-heart-broken {{#unless item.data.data.unusable}}item-working{{/unless}}"></i>
+              <i class="fas fa-heart-broken {{#unless item.system.unusable}}item-working{{/unless}}"></i>
             </a>
-            <a class="item-control asset-toggle-stealthed  {{#unless item.data.data.stealthed}}item-working{{/unless}}"
+            <a class="item-control asset-toggle-stealthed  {{#unless item.system.stealthed}}item-working{{/unless}}"
               title='{{localize 'swnr.sheet.faction.stealthed'}}'>
-              <i class="fas fa-user-ninja {{#unless item.data.data.stealthed}}item-working{{/unless}}"></i>
+              <i class="fas fa-user-ninja {{#unless item.system.stealthed}}item-working{{/unless}}"></i>
             </a>
 
             <a class="item-control item-edit text-gray-400 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
