--- a/src/templates/actors/fragments/limited-sheet.html
+++ b/src/templates/actors/fragments/limited-sheet.html
@@ -21,18 +21,18 @@
       <input
         class="border text-center px-1 border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
         type="text"
-        name="data.notes.public.label"
-        value="{{actor.data.data.notes.public.label}}"
+        name="system.notes.public.label"
+        value="{{actor.system.notes.public.label}}"
       />
       <!-- prettier-ignore  -->
       <textarea
-        name="data.notes.public.contents"
+        name="system.notes.public.contents"
         class="border px-1 border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
         id=""
         cols="30"
         rows="10"
-        placeholder="{{actor.data.data.notes.public.label}}"
-      >{{actor.data.data.notes.public.contents}}</textarea>
+        placeholder="{{actor.system.notes.public.label}}"
+      >{{actor.system.notes.public.contents}}</textarea>
     </div>
   </div>
 
