--- a/src/templates/actors/fragments/skill.html
+++ b/src/templates/actors/fragments/skill.html
@@ -2,7 +2,7 @@
   <a class="sheet-button skill-button inline-flex  gap-2">
     <div class="flex-shrink">
     {{zeroWidthBreaker item.name}}
-    {{numberFormat item.data.data.rank decimals=0 sign=true}}
+    {{numberFormat item.system.rank decimals=0 sign=true}}
     </div>
   </a>
 
