--- a/src/templates/actors/fragments/vehicle-notes.html
+++ b/src/templates/actors/fragments/vehicle-notes.html
@@ -3,7 +3,7 @@
                 <div class="pr-0.5">
                   Description
                   <div class="bg-gray-400 bg-opacity-75 border border-gray-700 rounded-md p-2 mt-4">
-                    {{editor content=data.data.description target="data.description" button=true
+                    {{editor actor.system.description target="system.description" button=true
                     owner=owner editable=editable}}
                   </div>
                 </div>
@@ -11,7 +11,7 @@
                 <div class="pr-0.5">
                   Mods
                   <div class="bg-gray-400 bg-opacity-75 border border-gray-700 rounded-md p-2 mt-4">
-                    {{editor content=data.data.mods target="data.mods" button=true
+                    {{editor actor.system.mods target="system.mods" button=true
                     owner=owner editable=editable}}
                   </div>
                 </div>
