--- a/src/templates/dialogs/roll-ship-attack.html
+++ b/src/templates/dialogs/roll-ship-attack.html
@@ -48,7 +48,7 @@
         <select name="stat"
           class="w-32 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
           {{#select defaultStat}}
-          {{#each gunner.data.data.stats as |box name |}}
+          {{#each gunner.system.stats as |box name |}}
           <option value="{{name}}">{{localize (concat "swnr.stat.long." name)}}</option>
           {{/each}}
           {{/select}}
@@ -66,7 +66,7 @@
 
       <div class="flex flex-col">
         <label for="npcSkill">{{localize 'swnr.sheet.ship.crew-skill-bonus'}}: </label>
-        <input name="npcSkill" type="number" step="1" value="{{ actor.data.crewSkillBonus }}"
+        <input name="npcSkill" type="number" step="1" value="{{ actor.system.crewSkillBonus }}"
           class="w-10 text-center px-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md" />
       </div>
 
