--- a/src/templates/items/armor-sheet.html
+++ b/src/templates/items/armor-sheet.html
@@ -4,7 +4,7 @@
   <div class="flex gap-1 justify-between">
     <div class="items-center">
       <div>
-        {{#if data.data.settings.useCWNArmor}}
+        {{#if item.system.settings.useCWNArmor}}
           {{localize 'swnr.armor.ranged'}}
         {{/if}}
         {{localize 'swnr.sheet.armor-class'}}:
@@ -14,13 +14,13 @@
         type="number"
         class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
         step="1"
-        name="data.ac"
+        name="system.ac"
         min="0"
         data-dtype="Number"
-        value="{{data.data.ac}}"
+        value="{{item.system.ac}}"
       />
     </div>
-    {{#if data.data.settings.useCWNArmor}}
+    {{#if item.system.settings.useCWNArmor}}
       <div class="items-center">
         <div>
             {{localize 'swnr.armor.melee'}}
@@ -31,10 +31,10 @@
           type="number"
           class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           step="1"
-          name="data.meleeAc"
+          name="system.meleeAc"
           min="0"
           data-dtype="Number"
-          value="{{data.data.meleeAc}}"
+          value="{{item.system.meleeAc}}"
         />
       </div>
 
@@ -47,26 +47,26 @@
             type="number"
             class="px-1 w-8 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
             step="1"
-            name="data.soak.value"
+            name="system.soak.value"
             min="0"
             data-dtype="Number"
-            value="{{data.data.soak.value}}"
+            value="{{item.system.soak.value}}"
           /> /
           <input
             type="number"
             class="px-1 w-8 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
             step="1"
-            name="data.soak.max"
+            name="system.soak.max"
             min="0"
             data-dtype="Number"
-            value="{{data.data.soak.max}}"
+            value="{{item.system.soak.max}}"
           />
         </div> 
       </div>
 
     {{/if}}
 
-    {{#if data.data.settings.useCWNArmor}}
+    {{#if item.system.settings.useCWNArmor}}
     </div>
     <div class="flex gap-1 justify-between">
     {{/if}}
@@ -79,20 +79,20 @@
           type="number"
           class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           step="1"
-          name="data.dr"
+          name="system.dr"
           min="0"
           data-dtype="Number"
-          value="{{data.data.dr}}"
+          value="{{system.dr}}"
         />
       </div> --}}
 
       <div class="flex flexcol">
         <div>{{localize 'swnr.armor.type.label'}}:</div>
         <select
-          name="data.type"
+          name="system.type"
           class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
         >
-          {{#select data.data.type}}
+          {{#select item.system.type}}
           <option value="primitive">
             {{localize 'swnr.armor.type.primitive'}}
           </option>
@@ -101,17 +101,17 @@
           <option value="powered">{{localize 'swnr.armor.type.powered'}}</option>
           {{/select}}
         </select>
-        {{#if data.data.settings.useTrauma}}
+        {{#if item.system.settings.useTrauma}}
           <div>
             {{localize 'swnr.armor.traumaMod'}}:
             <input
               type="number"
               class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
               step="1"
-              name="data.traumaDiePenalty"
+              name="system.traumaDiePenalty"
               min="0"
               data-dtype="Number"
-              value="{{data.data.traumaDiePenalty}}"
+              value="{{item.system.traumaDiePenalty}}"
             />
           </div>
         {{/if}}
@@ -119,26 +119,26 @@
       </div>
       <div class="flex flexcol">
         <label class="">
-          <input type="checkbox" name="data.shield" {{checked data.data.shield}} />
+          <input type="checkbox" name="system.shield" {{checked item.system.shield}} />
           {{localize 'swnr.armor.shield'}}
         </label>
-        {{#if data.data.settings.useCWNArmor}}
+        {{#if item.system.settings.useCWNArmor}}
         <label class="">
-          <input type="checkbox" name="data.isSubtle" {{checked data.data.isSubtle}} />
+          <input type="checkbox" name="system.isSubtle" {{checked item.system.isSubtle}} />
           {{localize 'swnr.armor.subtle'}}
         </label>
         <label class="">
-          <input type="checkbox" name="data.isHeavy" {{checked data.data.isHeavy}} />
+          <input type="checkbox" name="system.isHeavy" {{checked item.system.isHeavy}} />
           {{localize 'swnr.armor.heavy'}}
         </label>
         {{/if}}
 
       </div>
       <div class="flex flexcol">
-        {{#if data.data.shield}}
+        {{#if item.system.shield}}
           <div class="items-center">
             <div>
-              {{#if data.data.settings.useCWNArmor}}
+              {{#if item.system.settings.useCWNArmor}}
                 {{localize 'swnr.armor.ranged'}}
               {{/if}}          
               {{localize 'swnr.armor.shieldAC'}}:
@@ -148,14 +148,14 @@
               type="number"
               class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
               step="1"
-              name="data.shieldACBonus"
+              name="system.shieldACBonus"
               min="0"
               data-dtype="Number"
-              value="{{data.data.shieldACBonus}}"
+              value="{{item.system.shieldACBonus}}"
             />
           </div>
 
-          {{#if data.data.settings.useCWNArmor}}
+          {{#if item.system.settings.useCWNArmor}}
             <div class="items-center">
               <div>
                 {{localize 'swnr.armor.melee'}}
@@ -166,10 +166,10 @@
                 type="number"
                 class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
                 step="1"
-                name="data.shieldMeleeACBonus"
+                name="system.shieldMeleeACBonus"
                 min="0"
                 data-dtype="Number"
-                value="{{data.data.shieldMeleeACBonus}}"
+                value="{{item.system.shieldMeleeACBonus}}"
               />
             </div>
 
