--- a/src/templates/items/fragments/desc.html
+++ b/src/templates/items/fragments/desc.html
@@ -13,9 +13,9 @@
   <div class="pt-5">
     <input
       type="checkbox"
-      name="data.favorite"
+      name="system.favorite"
       class="pt-4 bg-gray-400"
-      {{checked data.data.favorite}}
+      {{checked item.system.favorite}}
     />
   </div>
 </div>
@@ -23,6 +23,6 @@
   <h2 class="text-base p-1">{{localize 'swnr.sheet.description'}}</h2>
   <div class="p-1 border-t border-black">
     {{!-- TODO: fix is for wrapping around text, because this is a little fixed --}}
-    {{editor content=data.data.description target="data.description" button=true owner=owner editable=editable }}
+    {{editor item.system.description target="system.description" button=true owner=owner editable=editable }}
   </div>
 </div>
