--- a/src/templates/items/weapon-sheet.html
+++ b/src/templates/items/weapon-sheet.html
@@ -17,8 +17,8 @@
         <input
           class="w-24 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           type="text"
-          name="data.damage"
-          value="{{data.data.damage}}"
+          name="system.damage"
+          value="{{item.system.damage}}"
         />
       </div>
       <div>
@@ -26,10 +26,10 @@
         <input
           type="number"
           class="w-10 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-          name="data.ab"
+          name="system.ab"
           step="1"
           data-dtype="Number"
-          value="{{data.data.ab}}"
+          value="{{item.system.ab}}"
         />
       </div>
     </div>
@@ -42,8 +42,8 @@
         <input
           type="number"
           class="w-8 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-          name="data.shock.dmg"
-          value="{{data.data.shock.dmg}}"
+          name="system.shock.dmg"
+          value="{{item.system.shock.dmg}}"
           min="0"
           step="1"
         />
@@ -52,11 +52,11 @@
         <div>{{localize 'swnr.weapon.shock.ac'}}:</div>
         <input class="w-8 text-center px-1.5 py-3 border border-gray-800
         bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75
-        rounded-md" type="number" name="data.shock.ac" value="{{data.data.shock.ac}}"
-        min="10" step="1" {{#if (lte data.data.shock.dmg 0)}} disabled {{/if}}>
+        rounded-md" type="number" name="system.shock.ac" value="{{item.system.shock.ac}}"
+        min="10" step="1" {{#if (lte item.system.shock.dmg 0)}} disabled {{/if}}>
       </div>
     </div>
-    {{#if data.data.settings.useTrauma}}
+    {{#if item.system.settings.useTrauma}}
     <!-- Trauma -->
     <div class="grid md:grid-cols-2 gap-1 pt-1">
       <h3 class="text-base w-full md:col-span-2">
@@ -66,9 +66,9 @@
         <div>{{localize 'swnr.weapon.trauma.die'}}:</div>
         <input
           class="w-16 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-          name="data.trauma.die"
+          name="system.trauma.die"
           type="text"
-          value="{{data.data.trauma.die}}"
+          value="{{item.system.trauma.die}}"
         />
       </div>
       <div>
@@ -76,8 +76,8 @@
           <input
           type="number"
           class="w-8 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-          name="data.trauma.rating"
-          value="{{data.data.trauma.rating}}"
+          name="system.trauma.rating"
+          value="{{item.system.trauma.rating}}"
           min="0"
           step="1"
         />
@@ -88,9 +88,9 @@
       <div>{{localize 'swnr.sheet.stats'}}:</div>
       <select
         class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
-        name="data.stat"
+        name="system.stat"
       >
-        {{#select data.data.stat}}
+        {{#select item.system.stat}}
         <option value="str">{{localize 'swnr.stat.long.str'}}</option>
         <option value="dex">{{localize 'swnr.stat.long.dex'}}</option>
         <option value="con">{{localize 'swnr.stat.long.con'}}</option>
@@ -101,9 +101,9 @@
       </select>
       <select
         class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
-        name="data.secondStat"
+        name="system.secondStat"
       >
-        {{#select data.data.secondStat}}
+        {{#select item.system.secondStat}}
         <option value="none">{{localize 'swnr.ammo.none'}}</option>
         <option value="str">{{localize 'swnr.stat.long.str'}}</option>
         <option value="dex">{{localize 'swnr.stat.long.dex'}}</option>
@@ -121,19 +121,19 @@
           type="number"
           class="w-12 px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           step="1"
-          name="data.range.normal"
+          name="system.range.normal"
           min="0"
           data-dtype="Number"
-          value="{{data.data.range.normal}}"
+          value="{{item.system.range.normal}}"
         /> /
         <input
           type="number"
           class="w-12 px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           step="1"
-          name="data.range.max"
+          name="system.range.max"
           min="0"
           data-dtype="Number"
-          value="{{data.data.range.max}}"
+          value="{{item.system.range.max}}"
         />
       </div>
       <div>
@@ -141,13 +141,13 @@
         <div>{{localize 'swnr.sheet.skill'}}:</div>
         <select
           class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
-          name="data.skill"
+          name="system.skill"
         >
-          {{#select data.data.skill}}
+          {{#select item.system.skill}}
           <option value="">{{ localize 'swnr.weapon.noSetSkill'}}</option>
           {{#each actor.itemTypes.skill }}
           <option value="{{this.id}}">
-            {{this.name}} {{this.data.data.rank}}
+            {{this.name}} {{this.system.rank}}
           </option>
           {{/each}} {{/select}}
         </select>
@@ -160,9 +160,9 @@
         <div> {{localize 'swnr.sheet.ammoType'}}: </div>
         <select
           class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
-          name="data.ammo.type"
+          name="system.ammo.type"
         >
-          {{#select data.data.ammo.type}}
+          {{#select item.system.ammo.type}}
           <option value="none">{{localize 'swnr.ammo.none'}}</option>
           <option value="typeAPower">
             {{localize 'swnr.ammo.typeAPower'}}
@@ -177,7 +177,7 @@
           {{/select}}
         </select>
       </div>
-      {{#if (and (ne data.data.ammo.type "none") (ne data.data.ammo.type "infinite"))}}
+      {{#if (and (ne item.system.ammo.type "none") (ne item.system.ammo.type "infinite"))}}
       <div class="pl-2">
         {{localize 'swnr.sheet.magazine'}}:
         <div class="flex gap-1 items-center">
@@ -187,9 +187,9 @@
             <input
               type="number"
               class="w-10 text-right subfield"
-              name="data.ammo.value"
-              max="{{data.data.ammo.max}}"
-              value="{{data.data.ammo.value}}"
+              name="system.ammo.value"
+              max="{{item.system.ammo.max}}"
+              value="{{item.system.ammo.value}}"
               data-dtype="Number"
               step="1"
               min="0"
@@ -198,8 +198,8 @@
             <input
               type="number"
               class="w-10 text-left subfield"
-              name="data.ammo.max"
-              value="{{data.data.ammo.max}}"
+              name="system.ammo.max"
+              value="{{item.system.ammo.max}}"
               data-dtype="Number"
               step="1"
               min="0"
@@ -211,20 +211,20 @@
     </div>
     <div class="-flex grid grid-cols-2 flex-wrap gap-1">
       <div class="w-full text-base col-span-2">Quirks:</div>
-      {{#if (ne data.data.ammo.type "none")}}
+      {{#if (ne item.system.ammo.type "none")}}
       <label class="flex items-center gap-1">
         <input
           type="checkbox"
-          name="data.ammo.longReload"
-          {{checked data.data.ammo.longReload}}
+          name="system.ammo.longReload"
+          {{checked item.system.ammo.longReload}}
         />
         <div>{{localize 'swnr.sheet.longReload'}}</div>
       </label>
       <label class="flex items-center gap-1">
         <input
           type="checkbox"
-          name="data.ammo.burst"
-          {{checked data.data.ammo.burst}}
+          name="system.ammo.burst"
+          {{checked item.system.ammo.burst}}
         />
         <div>{{localize 'swnr.sheet.burst'}}</div>
       </label>
@@ -232,8 +232,8 @@
       <label class="flex items-center gap-1">
         <input
           type="checkbox"
-          name="data.ammo.suppress"
-          {{checked data.data.ammo.suppress}}
+          name="system.ammo.suppress"
+          {{checked item.system.ammo.suppress}}
         />
         <div>{{localize 'swnr.sheet.suppress'}}</div>
       </label>
@@ -241,8 +241,8 @@
       <label class="flex items-center gap-1">
         <input
           type="checkbox"
-          name="data.skillBoostsDamage"
-          {{checked data.data.skillBoostsDamage}}
+          name="system.skillBoostsDamage"
+          {{checked item.system.skillBoostsDamage}}
       />
         <div>{{localize 'swnr.weapon.skillAddDamage'}}</div>
       </label>
@@ -250,8 +250,8 @@
       <label class="flex items-center gap-1">
         <input
           type="checkbox"
-          name="data.skillBoostsShock"
-          {{checked data.data.skillBoostsShock}}
+          name="system.skillBoostsShock"
+          {{checked item.system.skillBoostsShock}}
       />
         <div>{{localize 'swnr.weapon.skillAddShockDamage'}}</div>
       </label>
@@ -262,9 +262,9 @@
 
         <select
           class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
-          name="data.save"
+          name="system.save"
         >
-          {{#select data.data.save}}
+          {{#select item.system.save}}
           <option value="">-</option>
           <option value="physical">{{localize 'swnr.sheet.saves.physical'}}</option>
           <option value="mental">{{localize 'swnr.sheet.saves.mental'}}</option>
@@ -278,13 +278,13 @@
     </div>
   </div>
   <div class="grid grid-cols-1">
-      {{#if data.data.remember}}
-        {{#if data.data.remember.use}}
+      {{#if item.system.remember}}
+        {{#if item.system.remember.use}}
           <label class="flex items-center gap-1">
             <input
               type="checkbox"
-              name="data.remember.use"
-              {{checked data.data.remember.use}}
+              name="system.remember.use"
+              {{checked item.system.remember.use}}
             />
             <div>Use remembered attack (burst, mod, etc). <br>
               Uncheck to forget and ask on next to roll -- skill selection will remain.</div>
